--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Απλοποιημένος πίνακας ελέγχου. Καλύτερο για χρήστες αρχικού επιπέδου.",
   "user_profile_desc_power": "Προηγμένος πίνακας ελέγχου με πολλές πρόσθετες πληροφορίες.",
   "user_profile_desc_miner": "Πίνακας ελέγχου με πρόσθετες πληροφορίες για ανθρακωρύχους.",
-  "user_profile_desc_trader": "Πίνακας ελέγχου με πολλές πληροφορίες συναλλαγών και επιπλέον γραφήματα."
+  "user_profile_desc_trader": "Πίνακας ελέγχου με πολλές πληροφορίες συναλλαγών και επιπλέον γραφήματα.",
+  "select_profile": "Επιλέξτε ένα προφίλ χρήστη για διαφορετικούς πίνακες ελέγχου"
 }
