--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "सरलीकृत डैशबोर्ड। प्रवेश स्तर के उपयोगकर्ताओं के लिए सर्वश्रेष्ठ।",
   "user_profile_desc_power": "अतिरिक्त जानकारी के साथ उन्नत डैशबोर्ड।",
   "user_profile_desc_miner": "खनिकों के लिए अतिरिक्त जानकारी वाला डैशबोर्ड।",
-  "user_profile_desc_trader": "बहुत सारी ट्रेडिंग जानकारी और अतिरिक्त चार्ट वाला डैशबोर्ड।"
+  "user_profile_desc_trader": "बहुत सारी ट्रेडिंग जानकारी और अतिरिक्त चार्ट वाला डैशबोर्ड।",
+  "select_profile": "विभिन्न डैशबोर्ड के लिए उपयोगकर्ता प्रोफ़ाइल का चयन करें"
 }
