--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Упрощенная приборная панель. Лучше всего для пользователей начального уровня.",
   "user_profile_desc_power": "Расширенная панель управления с большим количеством дополнительной информации.",
   "user_profile_desc_miner": "Дашборд с дополнительной информацией для майнеров.",
-  "user_profile_desc_trader": "Панель инструментов с большим количеством торговой информации и дополнительными графиками."
+  "user_profile_desc_trader": "Панель инструментов с большим количеством торговой информации и дополнительными графиками.",
+  "select_profile": "Выберите профиль пользователя для разных панелей мониторинга"
 }
