--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Поједностављена контролна табла. Најбоље за кориснике почетног нивоа.",
   "user_profile_desc_power": "Напредна контролна табла са пуно додатних информација.",
   "user_profile_desc_miner": "Контролна табла са додатним информацијама за рударе.",
-  "user_profile_desc_trader": "Контролна табла са пуно информација о трговању и додатним графиконима."
+  "user_profile_desc_trader": "Контролна табла са пуно информација о трговању и додатним графиконима.",
+  "select_profile": "Изаберите кориснички профил за различите контролне табле"
 }
