--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Спрощена інформаційна панель. Найкраще для користувачів початкового рівня.",
   "user_profile_desc_power": "Розширена інформаційна панель з великою кількістю додаткової інформації.",
   "user_profile_desc_miner": "Панель приладів з додатковою інформацією для майнерів.",
-  "user_profile_desc_trader": "Інформаційна панель з великою кількістю торгової інформації та додатковими графіками."
+  "user_profile_desc_trader": "Інформаційна панель з великою кількістю торгової інформації та додатковими графіками.",
+  "select_profile": "Виберіть профіль користувача для різних інформаційних панелей"
 }
