--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Опростено табло за управление. Най -доброто за потребителите от начално ниво.",
   "user_profile_desc_power": "Разширено табло за управление с много допълнителна информация.",
   "user_profile_desc_miner": "Табло с допълнителна информация за миньори.",
-  "user_profile_desc_trader": "Табло за управление с много търговска информация и допълнителни графики."
+  "user_profile_desc_trader": "Табло за управление с много търговска информация и допълнителни графики.",
+  "select_profile": "Изберете потребителски профил за различни табла за управление"
 }
