--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Simplified Dashboard. Best for entry level users.",
   "user_profile_desc_power": "Advanced Dashboard with lots of additional information.",
   "user_profile_desc_miner": "Dashboard with additional information for miners.",
-  "user_profile_desc_trader": "Dashboard with lots of trading information and additional charts."
+  "user_profile_desc_trader": "Dashboard with lots of trading information and additional charts.",
+  "select_profile": "Select a User Profile for different dashboards"
 }
