--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Tableau de bord simplifié. Idéal pour les utilisateurs d'entrée de gamme.",
   "user_profile_desc_power": "Tableau de bord avancé avec de nombreuses informations supplémentaires.",
   "user_profile_desc_miner": "Tableau de bord avec des informations supplémentaires pour les mineurs.",
-  "user_profile_desc_trader": "Tableau de bord avec de nombreuses informations sur le trading et des graphiques supplémentaires."
+  "user_profile_desc_trader": "Tableau de bord avec de nombreuses informations sur le trading et des graphiques supplémentaires.",
+  "select_profile": "Sélectionnez un profil utilisateur pour différents tableaux de bord"
 }
