--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -436,5 +436,6 @@
   "user_profile_desc_simple": "Cruscotto semplificato. Ideale per utenti di livello base.",
   "user_profile_desc_power": "Dashboard avanzato con molte informazioni aggiuntive.",
   "user_profile_desc_miner": "Dashboard con informazioni aggiuntive per i minatori.",
-  "user_profile_desc_trader": "Dashboard con molte informazioni di trading e grafici aggiuntivi."
+  "user_profile_desc_trader": "Dashboard con molte informazioni di trading e grafici aggiuntivi.",
+  "select_profile": "Seleziona un profilo utente per diverse dashboard"
 }
