--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -428,5 +428,9 @@
   "unknown_address": "Άγνωστη διεύθυνση",
   "success_transaction_executed": "Η συναλλαγή εκτελέστηκε με επιτυχία",
   "no_tokens_available": "Δεν υπάρχουν διαθέσιμα διακριτικά",
-  "trade_tokens_with": "Συναλλαγές μάρκες με"
+  "trade_tokens_with": "Συναλλαγές μάρκες με",
+  "define_your_salt": "Προσδιορίστε το ατομικό σας αλάτι",
+  "enter_salt": "Εισαγάγετε ένα αυθαίρετο αλφαριθμητικό κείμενο",
+  "salt_hint": "Για να αυξήσετε την ασφάλεια της φράσης πρόσβασης, το δικό σας μεμονωμένο στοιχείο κειμένου (αλάτι) προστίθεται στη λίστα λέξεων που τυχαία δημιουργείται. Αυτή θα πρέπει να είναι μια απλή σύντομη αλφαριθμητική έκφραση, π.χ. κάτι προσωπικό ή τυχαία δημιουργημένο.",
+  "salt": "Βάλε αλάτι"
 }
