--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -428,5 +428,9 @@
   "unknown_address": "अज्ञात पता",
   "success_transaction_executed": "लेन-देन सफलतापूर्वक निष्पादित",
   "no_tokens_available": "कोई टोकन उपलब्ध नहीं है",
-  "trade_tokens_with": "के साथ व्यापार टोकन"
+  "trade_tokens_with": "के साथ व्यापार टोकन",
+  "define_your_salt": "अपने व्यक्तिगत नमक को परिभाषित करें",
+  "enter_salt": "एक मनमाना अल्फ़ान्यूमेरिक टेक्स्ट दर्ज करें",
+  "salt_hint": "आपके पासफ़्रेज़ की सुरक्षा बढ़ाने के लिए, आपका अपना व्यक्तिगत टेक्स्ट तत्व (नमक) बेतरतीब ढंग से उत्पन्न शब्द सूची में जोड़ा जाता है। यह एक साधारण लघु अक्षरांकीय अभिव्यक्ति होनी चाहिए, उदाहरण के लिए कुछ व्यक्तिगत या बेतरतीब ढंग से उत्पन्न।",
+  "salt": "नमक डालें"
 }
