--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -428,5 +428,9 @@
   "unknown_address": "不明な住所",
   "success_transaction_executed": "トランザクションが正常に実行されました",
   "no_tokens_available": "利用可能なトークンはありません",
-  "trade_tokens_with": "トークンを"
+  "trade_tokens_with": "トークンを",
+  "define_your_salt": "個々のソルトを定義する",
+  "enter_salt": "任意の英数字テキストを入力してください",
+  "salt_hint": "パスフレーズのセキュリティを強化するために、ランダムに生成された単語リストに独自のテキスト要素（ソルト）が追加されます。これは、単純な短い英数字の表現である必要があります。たとえば、個人的なものやランダムに生成されたものなどです。",
+  "salt": "塩を加える"
 }
