--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -428,5 +428,9 @@
   "unknown_address": "Adresă necunoscută",
   "success_transaction_executed": "Tranzacția a fost executată cu succes",
   "no_tokens_available": "Nu există jetoane disponibile",
-  "trade_tokens_with": "Tranzacționează jetoane cu"
+  "trade_tokens_with": "Tranzacționează jetoane cu",
+  "define_your_salt": "Definiți-vă sarea individuală",
+  "enter_salt": "Introduceți un text alfanumeric arbitrar",
+  "salt_hint": "Pentru a crește securitatea expresiei dvs. de acces, propriul dvs. element de text (sare) este adăugat la lista de cuvinte generate aleatoriu. Aceasta ar trebui să fie o simplă expresie alfanumerică scurtă, de exemplu ceva personal sau generat aleatoriu.",
+  "salt": "Adauga sare"
 }
