--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -428,5 +428,9 @@
   "unknown_address": "Неизвестный адрес",
   "success_transaction_executed": "Транзакция успешно выполнена",
   "no_tokens_available": "Нет доступных токенов",
-  "trade_tokens_with": "Обменять токены с"
+  "trade_tokens_with": "Обменять токены с",
+  "define_your_salt": "Определите свою индивидуальную соль",
+  "enter_salt": "Введите произвольный буквенно-цифровой текст",
+  "salt_hint": "Чтобы повысить безопасность вашей ключевой фразы, ваш собственный индивидуальный текстовый элемент (соль) добавляется в случайно сгенерированный список слов. Это должно быть простое короткое буквенно-цифровое выражение, например, что-то личное или сгенерированное случайным образом.",
+  "salt": "Добавить соль"
 }
