--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -428,5 +428,9 @@
   "unknown_address": "Neznáma adresa",
   "success_transaction_executed": "Transakcia bola úspešne vykonaná",
   "no_tokens_available": "Nie sú k dispozícii žiadne tokeny",
-  "trade_tokens_with": "Obchodujte s tokenmi s"
+  "trade_tokens_with": "Obchodujte s tokenmi s",
+  "define_your_salt": "Definujte svoju individuálnu soľ",
+  "enter_salt": "Zadajte ľubovoľný alfanumerický text",
+  "salt_hint": "Aby sa zvýšila bezpečnosť vašej prístupovej frázy, do zoznamu náhodne generovaných slov sa pridá váš vlastný individuálny textový prvok (soľ). Toto by mal byť jednoduchý krátky alfanumerický výraz, napríklad niečo osobné alebo náhodne vygenerované.",
+  "salt": "Pridajte soľ"
 }
