--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -428,5 +428,9 @@
   "unknown_address": "Непозната адреса",
   "success_transaction_executed": "Трансакција је успешно извршена",
   "no_tokens_available": "Токени нису доступни",
-  "trade_tokens_with": "Тргујте токенима са"
+  "trade_tokens_with": "Тргујте токенима са",
+  "define_your_salt": "Дефинишите своју индивидуалну сол",
+  "enter_salt": "Унесите произвољан алфанумерички текст",
+  "salt_hint": "Да бисте повећали сигурност своје приступне фразе, ваш појединачни текстуални елемент (сол) додаје се на случајно генерисану листу речи. Ово би требало да буде једноставан кратак алфанумерички израз, на пример нешто лично или насумично генерисано.",
+  "salt": "Додајте со"
 }
