--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -428,5 +428,9 @@
   "unknown_address": "Невідома адреса",
   "success_transaction_executed": "Транзакцію успішно виконано",
   "no_tokens_available": "Жодних токенів немає",
-  "trade_tokens_with": "Торгуйте токенами за допомогою"
+  "trade_tokens_with": "Торгуйте токенами за допомогою",
+  "define_your_salt": "Визначте свою індивідуальну сіль",
+  "enter_salt": "Введіть довільний буквено -цифровий текст",
+  "salt_hint": "Для того, щоб підвищити безпеку вашої парольної фрази, ваш власний окремий текстовий елемент (сіль) додається до випадково створеного списку слів. Це має бути простий короткий буквено -цифровий вираз, наприклад, щось особисте або випадково створене.",
+  "salt": "Додати сіль"
 }
