--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -428,5 +428,9 @@
   "unknown_address": "Неизвестен адрес",
   "success_transaction_executed": "Транзакцията е успешно изпълнена",
   "no_tokens_available": "Няма налични жетони",
-  "trade_tokens_with": "Търгувайте жетони с"
+  "trade_tokens_with": "Търгувайте жетони с",
+  "define_your_salt": "Определете вашата индивидуална сол",
+  "enter_salt": "Въведете произволен буквено -цифров текст",
+  "salt_hint": "За да се повиши сигурността на вашата парола, вашият собствен отделен текстов елемент (сол) се добавя към произволно генерирания списък с думи. Това трябва да бъде прост кратък буквено -цифров израз, например нещо лично или генерирано на случаен принцип.",
+  "salt": "Добавете сол"
 }
