--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -428,5 +428,9 @@
   "unknown_address": "Neznámá adresa",
   "success_transaction_executed": "Transakce byla úspěšně provedena",
   "no_tokens_available": "Nejsou k dispozici žádné tokeny",
-  "trade_tokens_with": "Obchodujte s tokeny"
+  "trade_tokens_with": "Obchodujte s tokeny",
+  "define_your_salt": "Definujte svou individuální sůl",
+  "enter_salt": "Zadejte libovolný alfanumerický text",
+  "salt_hint": "Aby se zvýšila bezpečnost vaší přístupové fráze, bude do seznamu náhodně generovaných slov přidán váš vlastní textový prvek (sůl). Měl by to být jednoduchý krátký alfanumerický výraz, například něco osobního nebo náhodně generovaného.",
+  "salt": "Přidat sůl"
 }
