--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -428,5 +428,9 @@
   "unknown_address": "Adresse inconnue",
   "success_transaction_executed": "Transaction exécutée avec succès",
   "no_tokens_available": "Aucun jeton disponible",
-  "trade_tokens_with": "Échangez des jetons avec"
+  "trade_tokens_with": "Échangez des jetons avec",
+  "define_your_salt": "Définissez votre sel individuel",
+  "enter_salt": "Saisissez un texte alphanumérique arbitraire",
+  "salt_hint": "Afin d'augmenter la sécurité de votre phrase secrète, votre propre élément de texte individuel (sel) est ajouté à la liste de mots générée aléatoirement. Il doit s'agir d'une simple expression alphanumérique courte, par exemple quelque chose de personnel ou généré de manière aléatoire.",
+  "salt": "Ajoutez du sel"
 }
