--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -428,5 +428,9 @@
   "unknown_address": "Onbekend adres",
   "success_transaction_executed": "Transactie succesvol uitgevoerd",
   "no_tokens_available": "Geen tokens beschikbaar",
-  "trade_tokens_with": "Wissel tokens met"
+  "trade_tokens_with": "Wissel tokens met",
+  "define_your_salt": "Definieer uw individuele Salt",
+  "enter_salt": "Voer een willekeurige alfanumerieke tekst in",
+  "salt_hint": "Om de veiligheid van uw wachtwoordzin te vergroten, wordt uw eigen individuele tekstelement (salt) toegevoegd aan de willekeurig gegenereerde woordenlijst. Dit moet een eenvoudige korte alfanumerieke uitdrukking zijn, bijvoorbeeld iets persoonlijks of willekeurig gegenereerd.",
+  "salt": "Voeg zout toe"
 }
