--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -428,5 +428,9 @@
   "unknown_address": "Nieznany adres",
   "success_transaction_executed": "Transakcja zrealizowana pomyślnie",
   "no_tokens_available": "Brak dostępnych tokenów",
-  "trade_tokens_with": "Handluj tokenami z"
+  "trade_tokens_with": "Handluj tokenami z",
+  "define_your_salt": "Określ swoją indywidualną sól",
+  "enter_salt": "Wpisz dowolny tekst alfanumeryczny",
+  "salt_hint": "Aby zwiększyć bezpieczeństwo Twojego hasła, Twój indywidualny element tekstowy (sól) jest dodawany do losowo generowanej listy słów. Powinno to być proste krótkie wyrażenie alfanumeryczne, np. coś osobistego lub wygenerowanego losowo.",
+  "salt": "Dodać sól"
 }
