--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Definisci il tuo sale individuale",
   "enter_salt": "Inserisci un testo alfanumerico arbitrario",
   "salt_hint": "Per aumentare la sicurezza della tua passphrase, il tuo elemento di testo individuale (sale) viene aggiunto all'elenco di parole generato casualmente. Questa dovrebbe essere una semplice breve espressione alfanumerica, ad esempio qualcosa di personale o generato casualmente.",
-  "salt": "Aggiungi sale"
+  "salt": "Aggiungi sale",
+  "your_new_account": "Il tuo account Signum",
+  "click_to_print": "Clicca per stampare"
 }
