--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Definieer uw individuele Salt",
   "enter_salt": "Voer een willekeurige alfanumerieke tekst in",
   "salt_hint": "Om de veiligheid van uw wachtwoordzin te vergroten, wordt uw eigen individuele tekstelement (salt) toegevoegd aan de willekeurig gegenereerde woordenlijst. Dit moet een eenvoudige korte alfanumerieke uitdrukking zijn, bijvoorbeeld iets persoonlijks of willekeurig gegenereerd.",
-  "salt": "Voeg zout toe"
+  "salt": "Voeg zout toe",
+  "your_new_account": "Uw Signum-account",
+  "click_to_print": "Klik om af te drukken"
 }
