--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Kişisel Tuzunuzu tanımlayın",
   "enter_salt": "İsteğe bağlı bir alfasayısal metin girin",
   "salt_hint": "Parolanızın güvenliğini artırmak için, rastgele oluşturulan kelime listesine kendi bireysel metin öğeniz (tuz) eklenir. Bu basit bir kısa alfasayısal ifade olmalıdır, örneğin kişisel veya rastgele oluşturulmuş bir şey.",
-  "salt": "Tuz ekle"
+  "salt": "Tuz ekle",
+  "your_new_account": "Signum Hesabınız",
+  "click_to_print": "Yazdırmak için tıklayın"
 }
