--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Определете вашата индивидуална сол",
   "enter_salt": "Въведете произволен буквено -цифров текст",
   "salt_hint": "За да се повиши сигурността на вашата парола, вашият собствен отделен текстов елемент (сол) се добавя към произволно генерирания списък с думи. Това трябва да бъде прост кратък буквено -цифров израз, например нещо лично или генерирано на случаен принцип.",
-  "salt": "Добавете сол"
+  "salt": "Добавете сол",
+  "your_new_account": "Вашата регистрирана сметка",
+  "click_to_print": "Щракнете, за да отпечатате"
 }
