--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Defina su sal individual",
   "enter_salt": "Ingrese un texto alfanumérico arbitrario",
   "salt_hint": "Para aumentar la seguridad de su frase de contraseña, su propio elemento de texto individual (salt) se agrega a la lista de palabras generada aleatoriamente. Debe ser una expresión alfanumérica corta y simple, por ejemplo, algo personal o generado aleatoriamente.",
-  "salt": "Agregue sal"
+  "salt": "Agregue sal",
+  "your_new_account": "Su cuenta Signum",
+  "click_to_print": "Haga clic para imprimir"
 }
