--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Określ swoją indywidualną sól",
   "enter_salt": "Wpisz dowolny tekst alfanumeryczny",
   "salt_hint": "Aby zwiększyć bezpieczeństwo Twojego hasła, Twój indywidualny element tekstowy (sól) jest dodawany do losowo generowanej listy słów. Powinno to być proste krótkie wyrażenie alfanumeryczne, np. coś osobistego lub wygenerowanego losowo.",
-  "salt": "Dodać sól"
+  "salt": "Dodać sól",
+  "your_new_account": "Twoje konto Signum",
+  "click_to_print": "Kliknij, aby wydrukować"
 }
