--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -432,5 +432,7 @@
   "define_your_salt": "Дефинишите своју индивидуалну сол",
   "enter_salt": "Унесите произвољан алфанумерички текст",
   "salt_hint": "Да бисте повећали сигурност своје приступне фразе, ваш појединачни текстуални елемент (сол) додаје се на случајно генерисану листу речи. Ово би требало да буде једноставан кратак алфанумерички израз, на пример нешто лично или насумично генерисано.",
-  "salt": "Додајте со"
+  "salt": "Додајте со",
+  "your_new_account": "Ваш пријављени налог",
+  "click_to_print": "Кликните да бисте одштампали"
 }
