--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -432,5 +432,7 @@
   "define_your_salt": "定义您的个人盐",
   "enter_salt": "输入任意字母数字文本",
   "salt_hint": "为了提高密码的安全性，您自己的个人文本元素（盐）被添加到随机生成的单词列表中。这应该是一个简单的短字母数字表达式，例如个人或随机生成的东西。",
-  "salt": "加盐"
+  "salt": "加盐",
+  "your_new_account": "您的登录帐户",
+  "click_to_print": "点击打印"
 }
